[project]
name = "ytex"
version = "0.0.1"
description = "Scripts for extracting data provided by Google's private InnerTube API. "
authors = [
    {name = "Simone Gentili",email = "gensimone.git@gmail.com"}
]
license = "GNU General Public License v3 (GPLv3)"
license-files = [ "LICENSE" ]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "innertube"
]

[project.scripts]
yt-exp = "ytex.yt_expl:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
